--- a/avahi-reflector/config.json
+++ b/avahi-reflector/config.json
@@ -4,13 +4,7 @@
   "slug": "avahi_reflector",
   "description": "avahi-daemon MQTT Service Broadcast",
   "url": "https://github.com/brandondb1/home-assistant-addons/avahi-reflector"
-  "arch": [
-    "armhf",
-    "armv7",
-    "aarch64",
-    "amd64",
-    "i386"
-  ],
+  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "image": "brandondb/home-assistant-addon-{arch}-avahi-reflector",
   "startup": "application",
   "boot": "auto",
