--- a/avahi-reflector/config.json
+++ b/avahi-reflector/config.json
@@ -1,7 +1,7 @@
 {
-  "name": "Avahi Reflector",
+  "name": "Avahi Reflector MQTT",
   "version": "0.9",
-  "slug": "avahi_reflector",
+  "slug": "avahi_reflector_mqtt",
   "description": "avahi-daemon MQTT Service Broadcast",
   "url": "https://github.com/brandondb1/home-assistant-addons/avahi-reflector"
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
